frontend/aws-eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  namespace: frontend-namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: test.xyz
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: reactjs-app-service
                port:
                  number: 80
